# livac

./: .gitattributes  .gitignore  BACKLOG.md  BUGS.md  CHANGELOG.md  CHANGELOG_ERRORS.md  Cargo.toml  DOCUMENTATION_REORGANIZATION.md  GENERICS_CHECKPOINT.md  HTTP_CLIENT_V0.9.6_RELEASE.md  INICIO_RAMA.md  LANGUAGE_ISSUES.md  LICENSE  LSP_IMPLEMENTATION_PLAN.md  LSP_WORKSPACE_PLAN.md  LSP_v0.12.0_COMPLETE.md  Makefile  PATTERN_MATCHING_PLAN.md  PHASE_3.5_MULTIFILE_CODEGEN.md  PLAN_CONCURRENCIA.md  README.md  README_Liva_v0.6.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.2.md  RESUMEN_ERRORES.md  ROADMAP.md  TASK_MANAGEMENT_APP.md  TODO.md  TODO_JSON_TYPED.md  TODO_MODULES.md  TODO_STDLIB.md  TUPLE_IMPLEMENTATION_PLAN.md  TUPLE_IMPROVEMENTS_v0.11.0.md  debug_tokens.rs  main.liva  main_no_class.liva  main_temp.liva  quickstart.md  run_tests.sh  script.sh  (+16 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
Formula/: livac.rb
benchmarks/: COMPILE_SPEED.md  RESULTS.md  binary_size.sh  compile_speed.sh  run_benchmarks.sh  run_official.sh
benchmarks/liva/: bench_classes.liva  bench_collections.liva  bench_strings.liva
benchmarks/rust/: bench_classes.rs  bench_collections.rs  bench_strings.rs
bootstrap/: Cargo.toml  FROZEN.md
bootstrap/seed/: livac-linux-amd64
bootstrap/src/: FROZEN.md  ast.rs  codegen.rs  desugaring.rs  error.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  semantic.rs  suggestions.rs
bootstrap/tests/: README.md  cli_subcommand_tests.rs  codegen_tests.rs  desugar_tests.rs  generics_parser_tests.rs  http_tests.rs  integration_tests.rs  lexer_tests.rs  semantics_tests.rs
bucket/: livac.json
compiler/: PARITY.md  test_concat.liva  test_suite.liva
compiler/docs/: ANALISIS_PROYECTO.md  ISSUES.md  PLAN.md  SELF_HOSTED_V2_AUDIT_2026-05-04.md
compiler/src/: ast.liva  codegen.liva  codegen_args.liva  codegen_async.liva  codegen_binary.liva  codegen_call.liva  codegen_cargo.liva  codegen_class.liva  codegen_controlflow.liva  codegen_decl.liva  codegen_enum.liva  codegen_enumfields.liva  codegen_expr.liva  codegen_function.liva  codegen_generate.liva  codegen_member.liva  codegen_methodcall.liva  codegen_methods.liva  codegen_mutself.liva  codegen_params.liva  codegen_returnflow.liva  codegen_server.liva  codegen_stdlib_methods.liva  codegen_stdlibtuple.liva  codegen_stmt.liva  codegen_switch.liva  codegen_test.liva  codegen_toplevel.liva  codegen_type.liva  codegen_typequery.liva  codegen_types.liva  codegen_utils.liva  codegen_vardecl.liva  lexer.liva  liveness.liva  main.liva  main.liva.bak  module.liva  parser.liva  semantic.liva  (+1 more)
compiler/tests/: bootstrap_test.sh  e2e_selfhost.sh  rebuild_selfhost.sh  run_all.sh
docs/: CONCURRENCIA_SISTEMA.md  ERROR_CODES.md  ERROR_HANDLING_GUIDE.md  ERROR_SYSTEM.md  LIVA_COMPLETE_DOCUMENTATION.md  Liva_v0.6_Desugaring.md  Liva_v0.6_EBNF_AST.md  Liva_v0.6_spec.md  OUTDATED_WARNING.md  PHASE1_PROGRESS.md  PHASE_6.1_JSON_API_DESIGN.md  PHASE_6.1_JSON_SUMMARY.md  PHASE_6.2_FILE_IO_API_DESIGN.md  PHASE_6.3_HTTP_CLIENT_DESIGN.md  PHASE_6.4_PATTERN_MATCHING_DESIGN.md  PHASE_6.5.1_PARAM_DESTRUCTURING_DESIGN.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README.md.backup  TROUBLESHOOTING.md  error_messages_improvements.md  feature_plan_lambdas_concurrency.md  refactor_plan.md
docs/archive/: quickstart.md
docs/compiler-internals/: architecture.md  ast.md  codegen.md  desugaring.md  enhanced-error-context.md  grammar.md  import-validation.md  ir.md  lexer.md  multifile-codegen.md  parser.md  semantic.md
docs/concurrency/: EXECUTION_MODES.md  PHASE1_PROGRESS.md  PROGRESS.md  README.md  REORGANIZATION_SUMMARY.md  RESUMEN_DOCUMENTACION.md
docs/design/: MODULE_SYNTAX_COMPARISON.md  MODULE_SYSTEM_PROPOSAL.md  MODULE_SYSTEM_SPEC.md  PHASE_5.10_TRAIT_ALIASES_SUMMARY.md  PHASE_5.9_SUMMARY.md  PHASE_6.2_FILE_IO_SUMMARY.md  PHASE_6.5_DESTRUCTURING_DESIGN.md  PHASE_7.1_TUPLE_TYPES_DESIGN.md
docs/getting-started/: installation.md  quick-start.md  v1.0.0-release.md
docs/guides/: MIGRATION_DESTRUCTURING_v0.10.2.md  cli-tools.md  json-typed-parsing.md  lazy-iterators.md  module-best-practices.md  style-guide.md  trait-aliases-guide.md  tuples.md
docs/language-reference/: class-extensions.md  classes-basics.md  classes.md  (+32 more)
docs_old/: AUDITORIA_COMPLETA_LIVA.md  ERROR_CODES.md  Liva_v0.6_Desugaring.md  Liva_v0.6_spec.md  README.md  feature_plan_lambdas_concurrency.md  refactor_plan.md
examples/: README.md  bug41_pop_test.liva  bug42_generic_index_test.liva  bug44_eq_clone_test.liva  bug52_division_test.liva  bug53_template_test.liva  bug54_display_test.liva  config_demo.env  config_demo.liva  json_arrow_functions.liva  json_parallel.liva  main.liva  test_array_generic.liva  test_b39.liva  test_bug32_33.liva  test_bug33_closure.liva  test_csv_parser.liva  test_exhaustive_int.liva  test_foreach.liva  test_generic_class.liva  test_http_crud.liva  test_json_typed_complete.liva  test_non_exhaustive_string.liva  test_option_generic.liva  test_or_patterns.liva  test_string_utils.liva  test_tuple_pattern_switch.liva  test_type_param_validation.liva
liva-tools/: Cargo.toml
liva-tools/src/: formatter.rs  lib.rs  linter.rs  main.rs
liva-tools/src/lsp/: diagnostics.rs  document.rs  imports.rs  server.rs  symbols.rs  workspace.rs
liva-tools/tests/: linter_tests.rs
scripts/: build-skill.sh  clean.sh  hydrate-ai-skills.sh  install-skills.ps1  install-skills.sh  install.sh  script.sh
src/: FROZEN.md  ast.rs  codegen.rs  codegen.rs.backup  desugaring.rs  error.rs  error_codes.rs  formatter.rs  hints.rs  ir.rs  lexer.rs  lib.rs  linter.rs  liva_rt.rs  liva_rt_template.rs.in  lowering.rs  lowering.rs.backup  main.rs  module.rs  parser.rs  semantic.rs  span.rs  suggestions.rs  traits.rs
tests/: README_CODEGEN_TESTS.md  codegen_ir_tests.rs  codegen_tests.rs  destructuring_parser_tests.rs  desugar_tests.rs  generics_parser_tests.rs  http_tests.rs  insta_settings.rs  integration_tests.rs  lexer_tests.rs  linter_tests.rs  parser_tests.rs  property_tests.rs  semantics_tests.rs
(+1390 files in other folders)
