[package]
name = "livac"
version = "1.2.0"
edition = "2021"
authors = ["Fran Nadal"]
description = "Liva to Rust compiler - combining TypeScript simplicity, Python expressiveness, and Rust safety"
homepage = "https://github.com/liva-lang/livac"
repository = "https://github.com/liva-lang/livac"
license = "MIT"
readme = "README.md"
keywords = ["compiler", "language", "liva", "rust", "transpiler"]
categories = ["compilers", "development-tools"]

[lib]
name = "livac"
path = "src/lib.rs"

[[bin]]
name = "livac"
path = "src/main.rs"

[dependencies]
# Parser and lexer
logos = "0.13"
chumsky = "0.9"

# AST and code generation
quote = "1.0"
proc-macro2 = "1.0"

# Error handling and diagnostics
thiserror = "1.0"
ariadne = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# File handling
walkdir = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# LSP
tower-lsp = "0.20"
dashmap = "5.5"

# Code formatting
prettyplease = "0.2"
syn = { version = "2.0", features = ["full", "parsing"] }

# Version info
rustc_version = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.40"
proptest = "1.4"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# === Packaging Metadata ===

[package.metadata.deb]
maintainer = "Fran Nadal"
copyright = "2024-2026 Fran Nadal"
extended-description = """\
Liva is a modern programming language that compiles to Rust. \
It combines the simplicity of TypeScript, the expressiveness of Python, \
and the safety and performance of Rust."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/livac", "usr/bin/", "755"],
    ["skills/liva-lang/SKILL.md", "usr/share/livac/skills/liva-lang/", "644"],
    ["scripts/install-skills.sh", "usr/share/livac/scripts/", "755"],
    ["docs/README.md", "usr/share/livac/docs/", "644"],
    ["docs/QUICK_REFERENCE.md", "usr/share/livac/docs/", "644"],
    ["docs/ERROR_CODES.md", "usr/share/livac/docs/", "644"],
    ["docs/language-reference/*.md", "usr/share/livac/docs/language-reference/", "644"],
    ["docs/language-reference/stdlib/*.md", "usr/share/livac/docs/language-reference/stdlib/", "644"],
    ["docs/guides/*.md", "usr/share/livac/docs/guides/", "644"],
]
conf-files = []
maintainer-scripts = "scripts/deb/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/livac", dest = "/usr/bin/livac", mode = "0755" },
    { source = "skills/liva-lang/SKILL.md", dest = "/usr/share/livac/skills/liva-lang/SKILL.md", mode = "0644" },
    { source = "scripts/install-skills.sh", dest = "/usr/share/livac/scripts/install-skills.sh", mode = "0755" },
    { source = "docs/README.md", dest = "/usr/share/livac/docs/README.md", mode = "0644" },
    { source = "docs/QUICK_REFERENCE.md", dest = "/usr/share/livac/docs/QUICK_REFERENCE.md", mode = "0644" },
    { source = "docs/ERROR_CODES.md", dest = "/usr/share/livac/docs/ERROR_CODES.md", mode = "0644" },
    { source = "docs/language-reference/classes-basics.md", dest = "/usr/share/livac/docs/language-reference/classes-basics.md", mode = "0644" },
    { source = "docs/language-reference/classes-data.md", dest = "/usr/share/livac/docs/language-reference/classes-data.md", mode = "0644" },
    { source = "docs/language-reference/classes-interfaces.md", dest = "/usr/share/livac/docs/language-reference/classes-interfaces.md", mode = "0644" },
    { source = "docs/language-reference/collections.md", dest = "/usr/share/livac/docs/language-reference/collections.md", mode = "0644" },
    { source = "docs/language-reference/concurrency.md", dest = "/usr/share/livac/docs/language-reference/concurrency.md", mode = "0644" },
    { source = "docs/language-reference/console-api.md", dest = "/usr/share/livac/docs/language-reference/console-api.md", mode = "0644" },
    { source = "docs/language-reference/control-flow.md", dest = "/usr/share/livac/docs/language-reference/control-flow.md", mode = "0644" },
    { source = "docs/language-reference/enums.md", dest = "/usr/share/livac/docs/language-reference/enums.md", mode = "0644" },
    { source = "docs/language-reference/error-handling.md", dest = "/usr/share/livac/docs/language-reference/error-handling.md", mode = "0644" },
    { source = "docs/language-reference/file-io.md", dest = "/usr/share/livac/docs/language-reference/file-io.md", mode = "0644" },
    { source = "docs/language-reference/functions-advanced.md", dest = "/usr/share/livac/docs/language-reference/functions-advanced.md", mode = "0644" },
    { source = "docs/language-reference/functions-basics.md", dest = "/usr/share/livac/docs/language-reference/functions-basics.md", mode = "0644" },
    { source = "docs/language-reference/generics-advanced.md", dest = "/usr/share/livac/docs/language-reference/generics-advanced.md", mode = "0644" },
    { source = "docs/language-reference/generics-basics.md", dest = "/usr/share/livac/docs/language-reference/generics-basics.md", mode = "0644" },
    { source = "docs/language-reference/http.md", dest = "/usr/share/livac/docs/language-reference/http.md", mode = "0644" },
    { source = "docs/language-reference/json-advanced.md", dest = "/usr/share/livac/docs/language-reference/json-advanced.md", mode = "0644" },
    { source = "docs/language-reference/json-basics.md", dest = "/usr/share/livac/docs/language-reference/json-basics.md", mode = "0644" },
    { source = "docs/language-reference/modules.md", dest = "/usr/share/livac/docs/language-reference/modules.md", mode = "0644" },
    { source = "docs/language-reference/operators.md", dest = "/usr/share/livac/docs/language-reference/operators.md", mode = "0644" },
    { source = "docs/language-reference/pattern-matching.md", dest = "/usr/share/livac/docs/language-reference/pattern-matching.md", mode = "0644" },
    { source = "docs/language-reference/string-templates.md", dest = "/usr/share/livac/docs/language-reference/string-templates.md", mode = "0644" },
    { source = "docs/language-reference/syntax-overview.md", dest = "/usr/share/livac/docs/language-reference/syntax-overview.md", mode = "0644" },
    { source = "docs/language-reference/type-aliases.md", dest = "/usr/share/livac/docs/language-reference/type-aliases.md", mode = "0644" },
    { source = "docs/language-reference/types-advanced.md", dest = "/usr/share/livac/docs/language-reference/types-advanced.md", mode = "0644" },
    { source = "docs/language-reference/types-primitives.md", dest = "/usr/share/livac/docs/language-reference/types-primitives.md", mode = "0644" },
    { source = "docs/language-reference/union-types.md", dest = "/usr/share/livac/docs/language-reference/union-types.md", mode = "0644" },
    { source = "docs/language-reference/variables.md", dest = "/usr/share/livac/docs/language-reference/variables.md", mode = "0644" },
    { source = "docs/language-reference/visibility.md", dest = "/usr/share/livac/docs/language-reference/visibility.md", mode = "0644" },
    { source = "docs/language-reference/stdlib/arrays.md", dest = "/usr/share/livac/docs/language-reference/stdlib/arrays.md", mode = "0644" },
    { source = "docs/language-reference/stdlib/conversions.md", dest = "/usr/share/livac/docs/language-reference/stdlib/conversions.md", mode = "0644" },
    { source = "docs/language-reference/stdlib/io.md", dest = "/usr/share/livac/docs/language-reference/stdlib/io.md", mode = "0644" },
    { source = "docs/language-reference/stdlib/math.md", dest = "/usr/share/livac/docs/language-reference/stdlib/math.md", mode = "0644" },
    { source = "docs/language-reference/stdlib/strings.md", dest = "/usr/share/livac/docs/language-reference/stdlib/strings.md", mode = "0644" },
    { source = "docs/guides/generics-quick-start.md", dest = "/usr/share/livac/docs/guides/generics-quick-start.md", mode = "0644" },
    { source = "docs/guides/json-typed-parsing.md", dest = "/usr/share/livac/docs/guides/json-typed-parsing.md", mode = "0644" },
    { source = "docs/guides/module-best-practices.md", dest = "/usr/share/livac/docs/guides/module-best-practices.md", mode = "0644" },
    { source = "docs/guides/trait-aliases-guide.md", dest = "/usr/share/livac/docs/guides/trait-aliases-guide.md", mode = "0644" },
    { source = "docs/guides/tuples.md", dest = "/usr/share/livac/docs/guides/tuples.md", mode = "0644" },
]
post_install_script = "scripts/rpm/post-install.sh"
pre_uninstall_script = "scripts/rpm/pre-uninstall.sh"
[package.metadata.generate-rpm.requires]
