[workspace]
members = ["bootstrap", "liva-tools"]
resolver = "2"

# Shared release profile for all workspace members (cargo only honours
# [profile.*] in the workspace root). Equivalent to the previous
# pre-F.3 livac package profile.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
