[package]
name = "liva-tools"
version = "2.5.0"
edition = "2021"
authors = ["Fran Nadal"]
description = "Liva developer tools — formatter, linter, language server"
homepage = "https://github.com/liva-lang/livac"
repository = "https://github.com/liva-lang/livac"
license = "MIT"

[lib]
name = "liva_tools"
path = "src/lib.rs"

[[bin]]
name = "liva-tools"
path = "src/main.rs"

[dependencies]
# Liva compiler (lib) — needed for AST, lexer, parser, semantic, error, span
# Provided by the frozen Rust bootstrap (post Phase F.3).
livac = { package = "livac-bootstrap", path = "../bootstrap" }

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
thiserror = "1.0"

# LSP
tower-lsp = "0.20"
dashmap = "5.5"
tokio = { version = "1", features = ["full"] }

# Formatter (Rust pretty-printing borrowed for sanity)
prettyplease = "0.2"
syn = { version = "2.0", features = ["full", "parsing"] }
